--- a/package.json
+++ b/package.json
@@ -10,12 +10,19 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "axios": "^0.16.2",
-        "bootstrap-sass": "^3.3.7",
+        "@popperjs/core": "^2.4.0",
+        "axios": "^0.19.2",
+        "bootstrap": "^4.4",
+        "bootstrap-vue": "^2.14.0",
         "cross-env": "^5.0.1",
-        "jquery": "^3.1.1",
-        "laravel-mix": "^1.0",
-        "lodash": "^4.17.4",
-        "vue": "^2.1.10"
+        "laravel-mix": "^5.0",
+        "resolve-url-loader": "^3.1.0",
+        "sass": "^1.26.5",
+        "sass-loader": "^8.0.2",
+        "vue": "^2.6",
+        "vue-template-compiler": "^2.6.11"
+    },
+    "dependencies": {
+        "vue-router": "^3.2.0"
     }
 }
