--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "devDependencies": {
         "@popperjs/core": "^2.4.0",
         "axios": "^0.19.2",
+        "babel-eslint": "^10.1.0",
         "bootstrap": "^4.4",
         "bootstrap-vue": "^2.14.0",
         "cross-env": "^5.0.1",
+        "eslint": "^7.0.0",
+        "eslint-plugin-vue": "^7.0.0-alpha.3",
         "laravel-mix": "^5.0",
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.26.5",
@@ -23,6 +26,9 @@
         "vue-template-compiler": "^2.6.11"
     },
     "dependencies": {
-        "vue-router": "^3.2.0"
+        "eslint-plugin-html": "^6.0.2",
+        "vue-eslint-parser": "^7.1.0",
+        "vue-router": "^3.2.0",
+        "vuex": "^3.4.0"
     }
 }
